force-app/main/default/objects/CopyTable__c/CopyTable__c.object-meta.xml
<CustomObject>
    <label>CopyTable</label>
    <nameField>
        <label>CopyTable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CopyTables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>