force-app/main/default/objects/CopyTable__c/fields/AccessionNo__c.field-meta.xml
<CustomField>
    <fullName>AccessionNo__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <externalId>true</externalId>
    <label>AccessionNo</label>
    <type>AutoNumber</type>
</CustomField>