force-app/main/default/objects/CopyTable__c/fields/CatNo1__c.field-meta.xml
<CustomField>
    <fullName>CatNo1__c</fullName>
    <label>CatNo1</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>