force-app/main/default/objects/CopyTable__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <label>IssueDate</label>
    <type>DateTime</type>
</CustomField>