force-app/main/default/objects/CopyTable__c/fields/IssuedToCandidate__c.field-meta.xml
<CustomField>
    <fullName>IssuedToCandidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IssuedToCandidate</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>CopyTables</relationshipLabel>
    <relationshipName>CopyTables</relationshipName>
    <type>Lookup</type>
</CustomField>