force-app/main/default/objects/CopyTable__c/fields/IssueTo__c.field-meta.xml
<CustomField>
    <fullName>IssueTo__c</fullName>
    <label>IssueTo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>