force-app/main/default/objects/CopyTable__c/fields/ReturnDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnDate__c</fullName>
    <label>ReturnDate</label>
    <type>DateTime</type>
</CustomField>