force-app/main/default/objects/CopyTable__c/validationRules/StatusChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusChanged</fullName>
    <active>true</active>
    <description>Status can not be change Issued to Shelf/Write-Off</description>
    <errorConditionFormula>NOT(PRIORVALUE(Status__c) = &apos;Issued&apos;)  &amp;&amp; 


ISPICKVAL(Status__c,&apos;Write-off&apos;)
  ||  ISPICKVAL(Status__c,&apos;Shelf&apos;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status can not be change Issued to Shelf/Write-Off</errorMessage>
</ValidationRule>