force-app/main/default/objects/CopyTable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AccessionNo__c</columns>
    <columns>CatNo1__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>IssuedToCandidate__c</columns>
    <columns>IssueDate__c</columns>
    <columns>ReturnDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>